cabal-version:      3.0
name:               breaking-spaces
version:            0.1.0.0
author:             Sam Cohen
maintainer:         samcohen@uchicago.edu
build-type:         Simple

executable breaking-spaces
    main-is:          Main.hs
    ghc-options: -Wall -Wno-name-shadowing -Wno-type-defaults
    other-modules: Layout
    build-depends:
         SVGFonts,
         base ^>=4.18.2.1,
         diagrams-lib,
         diagrams-svg,
         mtl,
         vector,
    hs-source-dirs:   .
    default-language: GHC2021
